fix: some script functions updated for right align

--- a/css/braclets/bracelets-revbidi.css
+++ b/css/braclets/bracelets-revbidi.css
@@ -32,9 +32,27 @@
   text-align: right;
 }
 
+/*** Main:review ***/
+
+.review-model-band {
+  flex-direction: row-reverse;
+}
+
+@media (max-width: 1380px) {
+  .review-model-pad {
+    justify-content: flex-start;
+    padding-left: 0;
+    padding-right: 50px;
+  }
+}
+
 @media (max-width: 1330px) {
+  .review-band-controls {
+    flex-direction: row-reverse;
+  }
+
   .title {
     flex-direction: column;
-    align-items: flex-end !important;
+    align-items: flex-end;
   }
 }
